[workspace]
resolver = "2"

members = ["generator", "ast", "testing"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.82.0"
license = "Apache-2.0"
license-file = "LICENSE.md"

[workspace.dependencies]
indexmap = "2.6"
tarnik-ast = { path = "ast", version = "0.1.0" }
similar = "2.7.0"
wast = "224.0"
