[package]
name = "tarnik-ast"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "A WASM AST implementation in Rust"

[dependencies]
indexmap.workspace = true
anyhow = "1"
slotmap = "1"
similar.workspace = true 
wast.workspace = true

[dev-dependencies]
similar.workspace = true
wast.workspace = true
