[package]
name = "tarnik"
version.workspace = true
edition.workspace = true
license-file = "LICENSE"
description = "Macro for generating WASM AST"
documentation = "https://docs.rs/tarnik"
homepage = "https://github.com/drogus/tarnik"
repository = "https://github.com/drogus/tarnik"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.92"
quote = "1.0.37"
syn = { version = "2.0.90", features = ["full", "extra-traits"] }
convert_case = "0.6"
tarnik-ast.workspace = true
regex = "1"
indexmap.workspace = true
anyhow = "1"
utf16string = "0.2.0"

[lib]
proc-macro = true

[features]
